data/forge_javadoc/1.9.4/raw/net/minecraft/client/model/ModelCreeper.md
---
title: "ModelCreeper"
description: "public class ModelCreeper extends ModelBase"
package: "net/minecraft/client/model"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/client/model/ModelCreeper.html"
sourceType: javadoc
---

# ModelCreeper

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelCreeper

## Class signature

```java
public class ModelCreeper extends ModelBase
```

## Constructors

- `ModelCreeper()`
- `ModelCreeper(float p_i46366_1_)`

## Methods

- `void render(Entity entityIn, float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch, float scale)`
- `void setRotationAngles(float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch, float scaleFactor, Entity entityIn)`

## Fields

- `ModelRenderer body`
- `ModelRenderer creeperArmor`
- `ModelRenderer head`
- `ModelRenderer leg1`
- `ModelRenderer leg2`
- `ModelRenderer leg3`
- `ModelRenderer leg4`
